feat: add fade transition

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -7,3 +7,12 @@ a {
 .text-align--center {
   text-align: center;
 }
+
+.fade-enter-active {
+  transition: opacity 0.5s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
