feat: add fishes in map to main page

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,3 +16,12 @@ a {
 .fade-leave-to {
   opacity: 0;
 }
+
+.a-fish-card {
+  &:hover &__icon--hover {
+    display: block;
+  }
+  &__icon--hover {
+    display: none;
+  }
+}
