--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -26,6 +26,32 @@ a {
   }
 }
 
+.a-cursor--pointer {
+  cursor: pointer;
+}
+
+.a-list__paginator {
+  max-width: 500px;
+}
+
+.a-search__input {
+  margin-top: -16px;
+  padding-top: 16px;
+  position: sticky;
+  top: 48px;
+  background-color: rgb(var(--v-theme-background));
+  z-index: 5;
+}
+
+.text-body-3 {
+  font-size: 0.8rem !important;
+  font-weight: 400;
+  line-height: 1.25rem;
+  letter-spacing: 0.0178571429em !important;
+  font-family: "Roboto", sans-serif !important;
+  text-transform: none !important;
+}
+
 @media (hover: none) {
   .a-fish-card {
     &:hover &__icon--hover {
